tests/sema/golden/05_index_non_array.out
tests/sema/bad/05_index_non_array.sg:2:13: error: indexing non-array value of type int
  let y:int = x[0];
              ^
